--- a/web/include/css/cv-builder-style2.css
+++ b/web/include/css/cv-builder-style2.css
@@ -57,7 +57,7 @@ body {margin-left: 0px; margin-top: 0px; margin-right: 0px; margin-bottom: 0px;}
 	.cv-design {width: 100%; background-color:#FFFFFF;}
 }
 @media screen{
-	.cv-design {width: 75%; float: right; background-color:#FFFFDD;}
+	.cv-design {width: 75%; float: right; background-color:#FFFFFF;}
 }
 
 .cv-header {width: 96%; margin: auto; border-bottom-style: double; border-bottom-width: 4px; box-sizing: border-box;}
